[package]
name = "todo-app-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-limitation = { default-features = false, features = [], version = "0.5.1" }
actix-web = { default-features = false, features = ["macros"], version = "4.5.1" }
chrono = { default-features = false, features = ["clock", "serde"], version = "0.4.38"}
mongodb = { default-features = false, features = ["bson-chrono-0_4", "bson-uuid-1", "tokio-runtime"], version = "2.8.2" }
serde = { default-features = false, features = ["derive"], version = "1.0.201" }
uuid = { default-features = false, features = ["fast-rng", "serde", "v4"], version = "1.8.0" }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"